--- a/public/index.css
+++ b/public/index.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-    background: linear-gradient(-45deg, #ff8000, #FFD700, #bf00ff);
+    background: linear-gradient(-45deg, #ff8000, #FFD700,);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     font-family: "Ubuntu";
